--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
 	"name": "namaturu",
-	"version": "0.6",
+	"version": "0.7",
 	"author": "PetyXbron",
 	"license": "MIT",
 	"private": true,
 	"dependencies": {
-		"katex": "^0.16.22",
+		"@vercel/analytics": "^1.5.0",
+		"@vercel/speed-insights": "^1.2.0",
 		"markdown-it-katex": "^2.0.3",
 		"vitepress": "^1.6.3"
+	},
+	"devDependencies": {
+		"@types/node": "^24.6.2"
 	},
 	"description": "Učební materiály",
 	"keywords": [
